# -gl_sandbox

./: .clang-format  .gitignore  CMakeLists.txt  assimp_handlers.cpp  assimp_handlers.hpp  gl_handlers.cpp  gl_handlers.hpp  gltf_handlers.cpp  gltf_handlers.hpp  main.cpp  primitives.hpp  shaders.hpp  va_for_each.hpp
gl/: bind_guard.cpp  bind_guard.hpp  buffer.hpp  framebuffer_object.cpp  framebuffer_object.hpp  passes.cpp  passes.hpp  shaders.cpp  shaders.hpp  textures.cpp  textures.hpp  vertex_array_object.cpp  vertex_array_object.hpp
gl/scene/: attachment.cpp  attachment.hpp  framebuffer.cpp  framebuffer.hpp  material.cpp  material.hpp  meshes.cpp  meshes.hpp  parameter.cpp  parameter.hpp  pass.cpp  pass.hpp  scene.cpp  scene.hpp
gltf/: adj_mesh_builder.cpp  adj_mesh_builder.hpp  camera.cpp  camera.hpp  commands_builder.cpp  commands_builder.hpp  common_commands_builder.cpp  common_commands_builder.hpp  common_drawables_builder.cpp  common_drawables_builder.hpp  common_images_builder.cpp  common_images_builder.hpp  common_material_builder.cpp  common_material_builder.hpp  common_mesh_builder.cpp  common_mesh_builder.hpp  common_parameters_builder.cpp  common_parameters_builder.hpp  custom_material_builder.cpp  custom_material_builder.hpp  drawables_builder.cpp  drawables_builder.hpp  gl_scene_builder.cpp  gl_scene_builder.hpp  gltf_graph.cpp  gltf_graph.hpp  gltf_handlers.cpp  gltf_handlers.hpp  gltf_parser.cpp  gltf_parser.hpp  images_builder.cpp  images_builder.hpp  material_builder.cpp  material_builder.hpp  mesh.cpp  mesh.hpp  mesh_builder.cpp  mesh_builder.hpp  meshes_processor.cpp  meshes_processor.hpp  (+4 more)
models/: whale.CYCLES.glb
scene/: material.cpp  material.hpp  meshes.cpp  meshes.hpp  scene.cpp  scene.hpp
(+16 files in other folders)
